# py-template

./: .pre-commit-config.yaml  pyproject.toml  tox.ini
.github/workflows/: tests.yml
requirements/: build.txt  dev.txt
tests/: test_template.py
